src/test/ui/nll/closure-requirements/region-lbr-anon-does-not-outlive-static.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/region-lbr-anon-does-not-outlive-static.rs:9:5
   |
LL | fn foo(x: &u32) -> &'static u32 {
   |           ---- help: add explicit lifetime `ReStatic` to the type of `x`: `&ReStatic u32`
LL |     &*x
   |     ^^^ lifetime `ReStatic` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
